@@ -25,6 +25,7 @@ PLUGIN_SHARED = \
   LSP_PLUGINS_SHARED
 
 PLUGIN_DEPENDENCIES     = \
+  LSP_PLUGINS_AB_TESTER \
   LSP_PLUGINS_ART_DELAY \
   LSP_PLUGINS_COMP_DELAY \
   LSP_PLUGINS_COMPRESSOR \
