@@ -4,6 +4,7 @@
 
 === 1.2.6 ===
 * Implemented Mixer plugin series for 4, 8 and 16 Mono/Stereo channels.
+* Implemented A/B Tester plugin series with blind option.
 * Equalizer is now smoothly operating with frequency/gain/q factor for each
   mode: FIR, IIR, FFT, SPM.
 * Added shared objects related to 3D rendering to LV2, VST and CLAP packages.
